--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@strapi/strapi": "4.9.1",
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.1",
+    "strapi-plugin-import-export-entries": "^1.21.0",
     "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
