--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "^4.10.1",
     "@strapi/plugin-users-permissions": "^4.10.1",
+    "@strapi/provider-upload-aws-s3": "^4.11.7",
     "@strapi/strapi": "^4.10.1",
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.1",
