--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/eslint-parser": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "eslint": "^8.46.0"
+  },
   "dependencies": {
     "@strapi/plugin-i18n": "^4.10.1",
     "@strapi/plugin-users-permissions": "^4.10.1",
