--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "better-sqlite3": "8.0.1",
     "pg": "^8.11.1",
     "strapi-plugin-import-export-entries": "^1.21.0",
-    "strapi-plugin-populate-deep": "^2.0.0"
+    "strapi-plugin-populate-deep": "^2.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "styled-components": "5.3.3"
   },
   "author": {
     "name": "Junoon Tech Team"
